# cortex-sp-null

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
